QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- System-tray icon context menu has been fixed/hacked to show up
  again on Plasma 5 (aka. KDE5) notification status area.

- Switched column entries in the unified interface device combo-
  box to make it work for macosx/coreaudio again.

- Blind fix to a FTBFS on macosx/coreaudio platforms, a leftover
  from the unified interface device selection combo-box inception,
  almost two years ago. (TESTING)

- Prevent x11extras module from use on non-X11/Unix plaforms.

- Late French (fr) translation update (by Olivier Humbert, thanks).


0.4.1  2015-10-28  A Fall'15 release.

- Probing portaudio audio device in a separate thread (by Kjetil
  Matheussen, thanks).

- Messages standard output capture has been improved again, now
  in both ways a non-blocking pipe may get.

- Regression fix for invalid system-tray icon dimensions reported
  by some desktop environment frameworks.

- New hi-res application icon (by Uttrup Renzel, Max Christian
  Pohle, thanks).

- System tray icon red background now blinks when a XRUN occurs.

- Desktop environment session shutdown/logout management has been
  also adapted to Qt5 framework.

- Single/unique application instance control adapted to Qt5/X11.

- Prefer Qt5 over Qt4 by default with configure script.

- Overrideable tooltips with latency info (re. Connections JACK
  client/ports: patch by Xavier Mendez, thanks).

- Complete rewrite of Qt4 vs. Qt5 configure builds.

- French (fr) translation update (by Olivier Humbert, thanks).


0.4.0  2015-07-15  Summer'15 release frenzy.

- Some windows fixes added (patch by Kjetil Matheussen, thanks).

- Most advanced Setup/Settings are moved into new Setup/Advanced
  settings tab; limit range for the real-time priority setting,
  now having 6 as absolute minimum valid value (after patches by
  Robin Gareus, thanks).
