@@ -33,6 +33,13 @@
    <caption xml:lang="fr">La fenêtre principale montrant l'application en action</caption>
   </screenshot>
  </screenshots>
+ <keywords>
+  <keyword>Audio</keyword>
+  <keyword>MIDI</keyword>
+  <keyword>ALSA</keyword>
+  <keyword>JACK</keyword>
+  <keyword>Qt</keyword>
+ </keywords>
  <url type="homepage">http://qjackctl.sourceforge.net</url>
  <updatecontact>rncbc@rncbc.org</updatecontact>
  <project_group>rncbc.org</project_group>
