@@ -14,6 +14,7 @@ Comment[ru]=Программа для управления звуковым се
 Exec=@ac_prefix@/bin/qjackctl
 Icon=qjackctl
 Categories=Audio;AudioVideo;Midi;X-Alsa;X-Jack;Qt;
+Keywords=Audio;MIDI;ALSA;JACK;LV2;Qt
 Terminal=false
 Type=Application
 X-SuSE-translate=true
