@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Added application keywords to freedesktop.org's AppData.
+
 - System-tray icon context menu has been fixed/hacked to show up
   again on Plasma 5 (aka. KDE5) notification status area.
 
